# agentic-gnn

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  bootstrap-secrets.sh  devcontainer.json
scripts/: graph_stats.py
src/agents/: __init__.py  base.py  ddd_consultant.py  developer.py  schemas.py  test_engineer.py
src/graph/: __init__.py  gnn.py  schema.py  store.py
src/orchestration/: __init__.py  council.py
src/ui/: app.py
